src/main/java/com/example/demo/error/exceptions/CustomBadRequestException.java
package com.example.demo.error.exceptions;

public class CustomBadRequestException extends RuntimeException {
    public CustomBadRequestException(String message) {
        super(message);
    }
}